@@ -7,12 +7,24 @@ def addStreams():
     pBar = xbmcutil.createProgressBar('NL Sports', 'Laden van streams...')
 
     xbmcutil.updateProgressBar(pBar, 16, 'JanLul 1')
-    jl_stream1 = bitly.getLink('janlul1', sourceSite)
-    veetle.addChannel('JanLul.com - Stream 1', jl_stream1, 'janlul')
-
+    # jl_stream1 = bitly.getLink('janlul1', sourceSite)
+    # veetle.addChannel('JanLul.com - Stream 1', jl_stream1, 'janlul')
+    janlul1 = 'http://cctv-lh.akamaihd.net/i/janlul1_live@125119/master.m3u8'
+    if bitly.getResponse(janlul1) :
+        color = 'green'
+    else :
+        color = 'red'
+    xbmcutil.addMenuItem('[COLOR '+color+']JanLul.com - Stream 1[/COLOR]', janlul1, 'true', 'janlul', 'janlul')
+	
     xbmcutil.updateProgressBar(pBar, 32, 'JanLul 2')
-    jl_stream2 = bitly.getLink('janlul2', sourceSite)
-    veetle.addChannel('JanLul.com - Stream 2', jl_stream2, 'janlul')
+    #jl_stream2 = bitly.getLink('janlul2', sourceSite)
+    #veetle.addChannel('JanLul.com - Stream 2', jl_stream2, 'janlul')
+    janlul2 = 'http://cctv-lh.akamaihd.net/i/janlul2_live@125116/master.m3u8'
+    if bitly.getResponse(janlul2):
+        color = 'green'
+    else :
+        color = 'red'
+    xbmcutil.addMenuItem('[COLOR '+color+']JanLul.com - Stream 2[/COLOR]', janlul2, 'true', 'janlul', 'janlul')
 
     xbmcutil.updateProgressBar(pBar, 48, 'JanLul 3')
     jl_stream3 = bitly.getLink('janlul3', sourceSite)
