@@ -1,3 +1,6 @@
+[B]v1.5[/B]
+- Updating streams
+
 [B]v1.3[/B]
 - Added Stream of the Day
 - Added Laat Mij Maar Gaan
